# Nordclan_test

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  task.md
pages/: main_page.py  vacancies_page.py
tests/: conftest.py
tests/ui/: test_main_page.py  test_vacancies_page.py
utils/: attach.py
